# pia_project-energy-analysis

./: .env  .gitignore  AI_USAGE.md  README.md  pyproject.toml  requirements.txt  run.py  video_link.md
config/: config.yaml
dashboards/: __init__.py  app.py  station_finder.py
data/output/: master_energy_weather_data.csv
pia_project_energy_analysis/: config_loader.py  data_processor.py  eia_fetcher.py  noaa_fetcher.py  pipeline.py
pia_project_energy_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: data_fetcher.py  data_processor.py  eia_fetcher.py  main.py  noaa_fetcher.py
utils/: find_ids.py
